Add transfer button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,15 +13,9 @@ a {
 
 button {
   padding: 0.5em;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
 }
 
-#start, #end {
+#start, #end, #xfer {
   display: none;
 }
 
@@ -37,6 +31,7 @@ button {
   display: none;
 }
 
-.speech-in-progress #end {
+.speech-in-progress #end,
+.speech-in-progress #xfer {
   display: initial;
 }
